--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,9 @@
         </dependency>
     </dependencies>
 
+    <modules>
+        <module>dependency-injection</module>
+    </modules>
+
 
 </project>
