Step 00: Setup Structure

--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,8 @@
         </dependency>
     </dependencies>
 
+    <modules>
+        <module>environment-abstraction</module>
+    </modules>
 
 </project>
