--- a/aop/pom.xml
+++ b/aop/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>spring-aop</artifactId>
             <version>5.3.16</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.3.16</version>
+        </dependency>
     </dependencies>
 
 </project>
